# genie-ai

./: CMakeLists.txt  LICENSE  README.md
src/: display.cpp  gemini.cpp  genie.cpp  genie.h  main.cpp  storage.cpp
